# bayer-visualiser

./: .env  .env.example  .gitignore  README.md  app.py  config.py  inspect_excel.py  main.py  pyproject.toml  requirements.txt  semantic_visualizer.py
data/: bayer_data.xlsx  prompts.json
tests/: __init__.py  test_semantic_visualizer.py
